# rano2.0-assist

./: .dockerignore  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflows/: draft-pdf.yml
JOSS/: paper.bib  paper.md
RANO/: RANO.py  README.md
RANO/Resources/: model_info.json
RANO/utils/: RANOLogic.py  config.py  enums.py  measurements2D_utils.py  rano_utils.py  report_creation_utils.py  response_classification_utils.py  results_table_utils.py  segmentation_utils.py  test_rano.py  ui_helper_utils.py
docker/: .slicerrc.py  Dockerfile  README.md  Slicer.ini  docker_build.sh  docker_run.sh  install.sh  install_dependencies.py  start-xorg.sh  xorg.conf
docs/: build_docs.sh
docs/doctrees/: environment.pickle  index.doctree
docs/source/: README.md  conf.py  index.md  utils.RANOLogic.rst  utils.enums.rst  utils.measurements2D_utils.rst  utils.rano_utils.rst  utils.report_creation_utils.rst  utils.response_classification_utils.rst  utils.results_table_utils.rst  utils.rst  utils.segmentation_utils.rst  utils.ui_helper_utils.rst
dynunet_pipeline/: README.md  install_requirements.sh  requirements.txt
dynunet_pipeline/data/: .gitignore
dynunet_pipeline/docker/: Dockerfile
dynunet_pipeline/docs/: index.html
dynunet_pipeline/src/: args.py  config.py  create_dataset.py  create_network.py  custom_handlers.py  dice.py  evaluator.py  inference.py  inferrer.py  trainer.py  training.py  transforms.py  utils.py
run_command/: run_command.py  run_command.xml
tests/: run_tests.py  run_tests.sh  run_tests_docker.sh
(+9 files in other folders)
